--- a/index.html
+++ b/index.html
@@ -469,6 +469,40 @@
         "• 15cm largo x 19cm ancho x 6cm profundo:$4,500",
         "• 20cm largo x 25cm ancho x 6cm profundo:$5,600",]
     },
+    {
+      id: 7,
+      nombre: "Empaques 3 separaciones",
+      descripcion: "Disponible en color blanco, ideal para chocolates, galletas...",
+      precio: "Desde $2,300",
+      imagenes: [
+        "img/3separaciones2.jpg",
+        "img/3separaciones.png"
+      ],
+      caracteristicas: ["Sin ventana:",
+        "• 6cm largo x 18 cm ancho x 5cm profundo:$2,300",
+        "• 8cm largo x 24cm ancho x 5cm profundo:$3,000",
+        "• 10cm largo x 30cm ancho x 6cm profundo:$3,900",
+        "Con ventana:",
+        "• 6cm largo x 18 cm ancho x 5cm profundo:$2,800",
+        "• 8cm largo x 24cm ancho x 5cm profundo:$4,000",
+        "• 10cm largo x 30cm ancho x 6cm profundo:$4,700",]
+    },
+    {
+      id: 8,
+      nombre: "Empaques para cupcakes",
+      descripcion: "Disponible en color blanco, se recomienda que verifiques las medidas con base a tus productos",
+      precio: "Desde $2,300",
+      imagenes: [
+        "img/cupcakes.png",
+      ],
+      caracteristicas: ["Sin ventana:",
+        "• 6 cupcakes: 24cm largo x 16 cm ancho x 10cm profundo:$3,800",
+        "• 12 cupcakes:33cm largo x 26cm ancho x 10cm profundo:$5,500",
+        "Con ventana:",
+        "• 6 cupcakes: 24cm largo x 16 cm ancho x 10cm profundo:$4,500",
+        "• 12 cupcakes:33cm largo x 26cm ancho x 10cm profundo:$6,000",
+      ]
+    },
 
   ];
 
