--- a/index.html
+++ b/index.html
@@ -499,10 +499,22 @@
         "• 6 cupcakes: 24cm largo x 16 cm ancho x 10cm profundo:$3,800",
         "• 12 cupcakes:33cm largo x 26cm ancho x 10cm profundo:$5,500",
         "Con ventana:",
-        "• 6 cupcakes: 24cm largo x 16 cm ancho x 10cm profundo:$4,500",
-        "• 12 cupcakes:33cm largo x 26cm ancho x 10cm profundo:$6,000",
+        "• 6 cupcakes: 24cm largo x 16 cm ancho x 10cm profundo:$4,400",
+        "• 12 cupcakes:33cm largo x 26cm ancho x 10cm profundo:$6,100",
       ]
     },
+    {
+      id: 9,
+      nombre: "Dulcera",
+      descripcion: "Disponible en color blanco",
+      precio: "Desde $5,000",
+      imagenes: [
+        "img/dulcera1.jpeg",
+        "img/dulcera2.png"
+      ],
+      caracteristicas: ["Tamaño mediano: $5,000",
+      ]
+         },
 
   ];
 
